build: enhance Docker and dev environment with new service profiles (#2)
- Add compatibility for Alpine glibc binaries in Dockerfile by installing libc6-compat package.
- Enhance devcontainer configuration with new extensions and settings, including terminal and launch configurations.
- Update network configuration in devcontainer to support proxy-network.
- Modify Makefile to dynamically determine architecture and ensure continuation on errors during service startup.
- Introduce README for setting up docker-compose testing environment.
- Add configuration files for EventPublishPlugin, PegasusIAM, and VirtualRegistryManagement services.
- Extend docker-compose to include profiles for service management and adds support for EPP, IAM, and VRM services.
- Update Docker-compose files with newer RabbitMQ and Redis image versions.
- Add additional service profiles in system environment configurations to control service start behavior.
- Introduce Swagger UI setup in docker-compose for VRM and IAM services.

Signed-off-by: Jimmy Chuang <ogre0403@gmail.com>

--- a/docker-compose/service/.env
+++ b/docker-compose/service/.env
@@ -1,3 +1,15 @@
-GOPROXY="https://proxy.golang.org,http://proxy.pegasus-cloud.com:8078"
+GOPROXY="https://proxy.golang.org|http://proxy.pegasus-cloud.com:8078|http://goproxy:8078"
+
 SERVICE_FOLDER_NAME=virtualregistrymanagement
 IAM_FOLDER_NAME=pegasusiam
+EPP_FOLDER_NAME=eventpublishplugin
+
+
+VRM_DISABLE=true                # comment this line to enable VRM service
+# VRM_RELEASE_DISABLE=true      # comment this line to enable VRM release service
+
+IAM_DISABLE=true                # comment this line to enable IAM service
+# IAM_RELEASE_DISABLE=true      # comment this line to enable IAM release service
+
+EPP_DISABLE=true                # comment this line to enable EPP service
+# EPP_RELEASE_DISABLE=true      # comment this line to enable EPP release service
