chore: enable VRM scheduler in docker compose configuration (#2)
- Update devcontainer JSON to include a new Scheduler Service launch configuration and change config paths for services.
- Include volume mounts for Golang DevContainer and set initialization command for a Docker volume.
- Change socket paths in multiple configuration files to use the `/run` directory.
- Introduce a new configuration file for VRM Scheduler with various cron tasks.
- Simplify and enable HTTP access control settings in VRM configuration.
- Swap disabled flags for VRM and EPP services in the `.env` file to control their activation.
- Add `tty: true` to ensure interactive mode for IAM and VRM containers.
- Add environment variables for RabbitMQ service configuration in its Docker Compose file.
- Disable tracer in the Virtual Registry Management configuration file.

Signed-off-by: Jimmy Chuang <ogre0403@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,9 +43,25 @@
 							"args": [
 								"serve",
 								"--config",
-								"etc/virtual-registry-management.yaml"
+								"docker-compose/etc/vrm.yaml"
+							]
+						},
+						{
+							"name": "Launch Scheduler Service",
+							"type": "go",
+							"request": "launch",
+							"mode": "auto",
+							"program": "${workspaceFolder}",
+							"args": [
+								"scheduler",
+								"--config",
+								"docker-compose/etc/vrm.yaml",
+								"--scheduler-config",
+								"docker-compose/etc/vrm-scheduler.yaml",
+								"start"
 							]
 						}
+
 					]
 				}
 			}
@@ -59,11 +75,17 @@
 		"--network=proxy-network",
 		// "--network=pegasus-cloud-network"
 	],
-	// "mounts": [
-	// 	{
-	// 		"source": "pegasus-cloud-eventpublishplugin",
-	// 		"target": "/var/lib/ASUS/EventPublishPlugin",
-	// 		"type": "volume"
-	// 	}
-	// ]
+	"mounts": [
+		{
+			"source": "vscocde-golang-devcontainer",
+			"target": "/go",
+			"type": "volume"
+		},
+		// {
+		// 	"source": "pegasus-cloud-eventpublishplugin",
+		// 	"target": "/var/lib/ASUS/EventPublishPlugin",
+		// 	"type": "volume"
+		// }
+	],
+	"initializeCommand": "docker volume create  vscocde-golang-devcontainer"
 }
