--- a/docker-compose/service/docker-compose.vrm.yaml
+++ b/docker-compose/service/docker-compose.vrm.yaml
@@ -3,6 +3,7 @@ services:
     profiles:
       - ${VRM_DISABLE:-}    
     image: golang:1.22.4-alpine
+    tty: true
     container_name: vrm-server
     networks:
       pegasus-cloud-network:
@@ -20,7 +21,7 @@ services:
         apk add make libc6-compat && \
         make start
     ports:
-      - "5109:5109" # http
+      # - "5109:5109" # grpc
       - "8109:8109" # http
     restart: on-failure  
     # privileged: true
@@ -29,6 +30,7 @@ services:
     profiles:
       - ${VRM_RELEASE_DISABLE:-}
     image: ociscloud/virtual-registry-management:0.0.6
+    tty: true
     container_name: vrm-server-release
     networks:
       pegasus-cloud-network:
@@ -36,12 +38,28 @@ services:
     volumes:
       - ${PWD}/docker-compose/etc/vrm.yaml:/mnt/vrm.yaml
       - pegasus-cloud-eventpublishplugin:/var/lib/ASUS/EventPublishPlugin
+      - pegasus-cloud-vrm-sock:/run
     command: ["/VirtualRegistryManagement","serve","-c","/mnt/vrm.yaml"]
     ports:
-      - "5109:5109" # http
+      # - "5109:5109" # grpc
       - "8109:8109" # http
     restart: on-failure  
 
+
+  pegasus-cloud-vrm-scheduler-release:
+    profiles:
+      - ${VRM_RELEASE_DISABLE:-}
+    image: ociscloud/virtual-registry-management:0.0.6
+    tty: true
+    container_name: vrm-server-scheduler-release
+    networks:
+      pegasus-cloud-network:
+        ipv4_address: 172.40.120.2
+    volumes:
+      - ${PWD}/docker-compose/etc/vrm.yaml:/mnt/vrm.yaml
+      - ${PWD}/docker-compose/etc/vrm-scheduler.yaml:/mnt/scheduler.yaml
+    command: ["/VirtualRegistryManagement","-c","/mnt/vrm.yaml","-s","/mnt/scheduler.yaml","scheduler","start"]
+    restart: on-failure  
 
 networks:
   pegasus-cloud-network:
@@ -49,6 +67,8 @@ networks:
     name: pegasus-cloud-network
 
 volumes:
+  pegasus-cloud-vrm-sock:
+    name: pegasus-cloud-vrm-sock
   pegasus-cloud-eventpublishplugin:
     name: pegasus-cloud-eventpublishplugin
     external: true
