--- a/docker-compose/system/.env
+++ b/docker-compose/system/.env
@@ -2,4 +2,4 @@ JAEGER_DISABLE=true         # comment this line to enable jaeger service
 SWAGGER_DISABLE=true        # comment this line to enable SWAGGER service
 PHPMYADMIN_DISABLE=true     # comment this line to enable phpMyAdmin service
 REDISINSIGHT_DISABLE=true   # comment this line to enable redis insight service
-RABBITMQ_DISABLE=true       # comment this line to enable rabbitmq service
+# RABBITMQ_DISABLE=true       # comment this line to enable rabbitmq service
