--- a/docker-compose/system/docker-compose.rabbitmq.yaml
+++ b/docker-compose/system/docker-compose.rabbitmq.yaml
@@ -12,6 +12,11 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    environment:
+      - RABBITMQ_MANAGEMENT_ALLOW_WEB_ACCESS=true
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+
 networks:
   pegasus-cloud-network:
     external: true
