--- a/docker-compose/service/docker-compose.iam.yaml
+++ b/docker-compose/service/docker-compose.iam.yaml
@@ -3,6 +3,7 @@ services:
     profiles:
       - ${IAM_DISABLE:-}    
     image: golang:1.22.4-alpine
+    tty: true
     container_name: iam-server
     networks:
       pegasus-cloud-network:
@@ -33,6 +34,7 @@ services:
     profiles:
       - ${IAM_RELEASE_DISABLE:-}
     image: ociscloud/iam:1.8.3
+    tty: true
     container_name: iam-server-release
     networks:
       pegasus-cloud-network:
@@ -40,6 +42,7 @@ services:
     volumes:
       - ${PWD}/docker-compose/etc/iam.yaml:/mnt/iam.yaml
       - pegasus-cloud-eventpublishplugin:/var/lib/ASUS/EventPublishPlugin
+      - pegasus-cloud-iam-sock:/run
     command: ["/PegasusIAM","serve","-c","/mnt/iam.yaml"]
     ports:
       - "8084:8084" # http
@@ -51,6 +54,8 @@ networks:
     name: pegasus-cloud-network
 
 volumes:  
+  pegasus-cloud-iam-sock:
+    name: pegasus-cloud-iam-sock  
   pegasus-cloud-eventpublishplugin:
     name: pegasus-cloud-eventpublishplugin
     external: true
