chore: adjust VRM scheduler service configurations (#2)
- Comment out the `event_consume` configuration in `vrm-scheduler.yaml`.
- Comment out the private namespace configuration in `vrm.yaml`.
- Change `pid_source` from `id` to `extra.tw-tc-ad1.opsk.uuid` in `vrm.yaml`.
- Add a commented line in `.env` to disable VRM scheduler service.
- Change VRM scheduler release profile reference from `VRM_RELEASE_DISABLE` to `VRM_SCHEDULER_DISABLE` in `docker-compose.vrm.yaml`.

Signed-off-by: Jimmy Chuang <ogre0403@gmail.com>

--- a/docker-compose/etc/vrm-scheduler.yaml
+++ b/docker-compose/etc/vrm-scheduler.yaml
@@ -29,8 +29,8 @@ VirtualRegistryManagementScheduler:
       cron_expression: "0 */10 * * * * *"
     count_hard_limited_exceed:
       cron_expression: "0 */10 * * * * *"
-event_consume:
-  # service 輸入指定的 Service Name 或 empty(不啟動) 
-  service: my_redis_sentinel
-  channels:
-  - FromIAM
+# event_consume:
+#   # service 輸入指定的 Service Name 或 empty(不啟動) 
+#   service: my_redis_sentinel
+#   channels:
+#   - FromIAM
