--- a/docker-compose/service/.env
+++ b/docker-compose/service/.env
@@ -13,3 +13,5 @@ IAM_DISABLE=true                # comment this line to enable IAM service
 
 VRM_DISABLE=true                # comment this line to enable VRM service
 # VRM_RELEASE_DISABLE=true      # comment this line to enable VRM release service
+
+# VRM_SCHEDULER_DISABLE=true    # comment this line to enable VRM scheduler service
